# json-api

./: .gitignore  README.md  json-api.cabal  stack-ghcjs.yaml  stack.yaml
persistent-test/: Models.hs  Spec.hs
src/Data/: JSONAPI.hs
src/Data/JSONAPI/: Document.hs  Error.hs  Identifier.hs  Link.hs  Meta.hs  Relationship.hs  Resource.hs
src/Data/JSONAPI/Internal/: Document.hs  Error.hs  Identifier.hs  Included.hs  Link.hs  Meta.hs  Relationship.hs  Resource.hs  Util.hs
src/Data/JSONAPI/Internal/GHCJS/: Fix.hs  Instances.hs
test/: ArbitraryInstances.hs  DocumentExamples.hs  Example.hs  Examples.hs  Spec.hs  Types.hs
test/GHC/: Spec.hs
test/GHCJS/: Spec.hs
