name:                json-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/plow-technologies/json-api#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
copyright:           2017 Plow Technologies
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.JSONAPI
                       Data.JSONAPI.Document
                       Data.JSONAPI.Error
                       Data.JSONAPI.Identifier
                       Data.JSONAPI.Link
                       Data.JSONAPI.Meta
                       Data.JSONAPI.Relationship
                       Data.JSONAPI.Resource
  
  other-modules:       Data.JSONAPI.Internal.Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , unordered-containers
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , json-api
                     , hspec
                     , hspec-golden-aeson
                     , quickcheck-arbitrary-adt
                     , QuickCheck
                     , text
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/plow-technologies/json-api
