name:                json-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/plow-technologies/json-api#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
copyright:           2017 Plow Technologies
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.JSONAPI
  other-modules:       Data.JSONAPI.Internal.Document
                       Data.JSONAPI.Internal.Error
                       Data.JSONAPI.Internal.Identifier
                       Data.JSONAPI.Internal.Included
                       Data.JSONAPI.Internal.Link
                       Data.JSONAPI.Internal.Meta
                       Data.JSONAPI.Internal.Relationship
                       Data.JSONAPI.Internal.Resource
                       Data.JSONAPI.Internal.Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , hashable
                     , text
                     , unordered-containers
                     , vector
                     , vector-instances               
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ArbitraryInstances
                       DocumentExamples
                       Examples
                       Types
  build-depends:       base
                     , aeson
                     , json-api
                     , hashable
                     , hspec
                     , hspec-golden-aeson
                     , quickcheck-arbitrary-adt
                     , QuickCheck
                     , text
                     , unordered-containers
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror  
  default-language:    Haskell2010

test-suite persistent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      persistent-test
  main-is:             Spec.hs
  other-modules:       Models
  build-depends:       base
                     , aeson
                     , json-api
                     , hashable
                     , hspec
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , text
                     , unordered-containers
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  -Wall -Werror  
  default-language:    Haskell2010
  

source-repository head
  type:     git
  location: https://github.com/plow-technologies/json-api
